--- a/index.html
+++ b/index.html
@@ -656,10 +656,10 @@
     
     <h1>Biography</h1>
 
-    <p>Taewoon Kim is a PhD researcher at 
+    <p>I am a PhD researcher at 
 <a href="http://www.cltl.nl/" target="_blank" rel="noopener">CLTL</a> and 
-<a href="https://www.hybrid-intelligence-centre.nl/" target="_blank" rel="noopener">The Hybrid Intelligence Centre</a>. He&rsquo;s supervised by 
-<a href="https://en.wikipedia.org/wiki/Piek_Vossen" target="_blank" rel="noopener">Piek Vossen</a>. He believes in the future where human and machine intelligence complement each other.</p>
+<a href="https://www.hybrid-intelligence-centre.nl/" target="_blank" rel="noopener">The Hybrid Intelligence Centre</a>. I&rsquo;m supervised by 
+<a href="https://en.wikipedia.org/wiki/Piek_Vossen" target="_blank" rel="noopener">Piek Vossen</a>. I believe in the future where human and machine intelligence complement each other.</p>
 
 
     <div class="row">
