--- a/publication/index.html
+++ b/publication/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="PhD Researcher">
+  <meta name="description" content="AI engineer">
 
   
   <link rel="alternate" hreflang="en-us" href="/publication/">
@@ -267,7 +267,7 @@
   <meta property="og:site_name" content="Taewoon Kim">
   <meta property="og:url" content="/publication/">
   <meta property="og:title" content="Publications | Taewoon Kim">
-  <meta property="og:description" content="PhD Researcher"><meta property="og:image" content="/images/icon_hu3fe8004869202247175e7257b80d7a5b_247389_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="AI engineer"><meta property="og:image" content="/images/icon_hu3fe8004869202247175e7257b80d7a5b_247389_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu3fe8004869202247175e7257b80d7a5b_247389_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
