--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="AI engineer">
+  <meta name="description" content="Artificial Intelligence Engineer">
 
   
   <link rel="alternate" hreflang="en-us" href="/404.html">
@@ -265,7 +265,7 @@
   <meta property="og:site_name" content="Taewoon Kim">
   <meta property="og:url" content="/404.html">
   <meta property="og:title" content="404 Page not found | Taewoon Kim">
-  <meta property="og:description" content="AI engineer"><meta property="og:image" content="/images/icon_hu3fe8004869202247175e7257b80d7a5b_247389_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="Artificial Intelligence Engineer"><meta property="og:image" content="/images/icon_hu3fe8004869202247175e7257b80d7a5b_247389_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu3fe8004869202247175e7257b80d7a5b_247389_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
