--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Artificial Intelligence Researcher</h4>
-            <h4 class="card-title exp-company text-muted my-0"><a href="http://www.cltl.nl/" target="_blank" rel="noopener">Vrije Universiteit Amsterdam</a></h4>
+            <h4 class="card-title exp-company text-muted my-0">Vrije Universiteit Amsterdam</h4>
             <div class="text-muted exp-meta">
               Sep 2020 –
               
@@ -908,7 +908,7 @@
                 <span>Amsterdam, Netherlands</span>
               
             </div>
-            <div class="card-text">Research in Communicative Robots, Language Grounding, End-to-End Deep Learning, etc.</div>
+            <div class="card-text">I&rsquo;m part of <a href="http://www.cltl.nl/">the Computational Lexicology &amp; Terminology Lab</a> and <a href="https://www.hybrid-intelligence-centre.nl/">the Hybrid Intelligence Centre</a>.</div>
           </div>
         </div>
       </div>
