--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
                 <span>Amsterdam, Netherlands</span>
               
             </div>
-            <div class="card-text">I&rsquo;m part of <a href="http://www.cltl.nl/">the Computational Lexicology &amp; Terminology Lab</a> and <a href="https://www.hybrid-intelligence-centre.nl/">the Hybrid Intelligence Centre</a>.</div>
+            <div class="card-text">Research in multimodal human-robot interaction, using emotion and memory.</div>
           </div>
         </div>
       </div>
