--- a/about.html
+++ b/about.html
@@ -11,5 +11,9 @@ background: "/img/bg-about.jpg"
   making them actually work in real life. I believe figuring out and improving
   artificial general intelligence is super important for all of us. I’m all
   about open-sourcing projects because it’s the best way to make AI better
-  together. Feel free to check out what I’m up to on the below icons.
+  together.
+  <strong
+    >Feel free to check out what I’m up to, by clicking on the icons in the
+    below footer.</strong
+  >
 </p>
