--- a/projects.html
+++ b/projects.html
@@ -5,4 +5,24 @@ description: Some research & engineering projects that I'm working on.
 background: "/img/bg-about.jpg"
 ---
 
-<p>I have several projects that I have worked on. I have listed them below.</p>
+<a href="llm.html">
+  <h4>Large Language Models</h4>
+</a>
+
+<hr />
+
+<a href="computer-vision.html">
+  <h4>Computer Vision</h4>
+</a>
+
+<hr />
+
+<a href="a-machine-with-human-like-memory-systems.html">
+  <h4>A Machine With Human-Like Memory Systems</h4>
+</a>
+
+<hr />
+
+<a href="tracking-glass-bottle-bottles-in-the-sea.html">
+  <h4>Tracking Glass Bottles With Letter in the Sea</h4>
+</a>
