Shorten the file names

--- a/projects.html
+++ b/projects.html
@@ -17,12 +17,12 @@ background: "/img/bg-about.jpg"
 
 <hr />
 
-<a href="/projects/a-machine-with-human-like-memory-systems.html">
+<a href="/projects/human-memory.html">
   <h4>A Machine With Human-Like Memory Systems</h4>
 </a>
 
 <hr />
 
-<a href="/projects/tracking-glass-bottle-bottles-in-the-sea.html">
+<a href="/projects/glass-track.html">
   <h4>Tracking Glass Bottles With Letter in the Sea</h4>
 </a>
