--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 layout: page
 title: Projects
 description: Some research & engineering projects that I'm working on.
-background: "/img/bg-about.jpg"
+background: "/img/ai-work-ai.png"
 ---
 
 <a href="/projects/llm.html">
