--- a/projects/glass-track.html
+++ b/projects/glass-track.html
@@ -1,5 +1,7 @@
 ---
 layout: page
 title: Tracking Glass Bottles With Letter in the Sea
-background: "/img/bg-about.jpg"
+background: "/img/projects/glass-track.png"
 ---
+
+<h1>WIP!</h1>
