--- a/projects/human-memory.html
+++ b/projects/human-memory.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: A Machine With Human-Like Memory Systems
-background: "/img/bg-about.jpg"
+background: "/img/projects/human-memory.png"
 ---
 
 <a href="https://arxiv.org/abs/2204.01611"
