--- a/_posts/2023-12-12-new-website.html
+++ b/_posts/2023-12-12-new-website.html
@@ -2,7 +2,7 @@
 layout: post
 title: "My new website"
 subtitle: "My boring old website had to be gone."
-date: 2023-12-12 08:56:56 0100
+date: 2023-12-12
 background: "/img/posts/new-website.png"
 ---
 
